2011-06-05 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/gen.c:
	  Fixed use of arbitrary register combinations as return value.

2011-06-01 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/ralloc2.cc,
	  src/z80/gen.c,
	  src/z80/gen.h:
	  Emit info about the register assignment being optimal when using --fverbose-asm.

2011-05-27 Philipp Klaus Krause <pkk AT spth.de>

	* Merge from trunk.

2011-05-27 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCCtree_dec.hpp,
	  src/z80/ralloc2.cc:
	  Workarounds for compiler warnings.

2011-05-26 Maarten Brock <sourceforge.brock AT dse.nl>

	* src/hc08/main.c(hc08_dwarfRegNum): fixed interface
	* src/mcs51/gen.c: fixed MSVC errors by changing snprintf to SNPRINTF
	* src/port.h: fixed regNum and getRegName function pointer definitions
	* src/z80/gen.c(genJumpTab): fixed warning

2011-05-26 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/z80/gen.c:
	  Workarounds for compiler warnings.

2011-05-26 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* Merge from trunk.

2011-05-25 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/SDCCicode.c,
	  src/z80/gen.c,
	  src/z80/ralloc2.cc:
	  Exact cost for builtin function calls.

2011-05-25 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/SDCCtree_dec.hpp,
	  src/SDCCralloc.hpp,
	  src/z80/ralloc2.cc:
	  Fixed bug in Thorup heuristic, that resulted in much higher width of tree-decomposition.

2011-05-21 Philipp Klaus Krause <pkk AT spth.de>

	* Merge from trunk.

2011-05-18 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/z80/gen.c:
	  Remove unnecessary statement, debug message cleanup.

2011-05-18 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/SDCCtree_dec.hpp,
	  src/SDCCralloc.hpp,
	  src/z80/rallo2.cc:
	  Debug message cleanup.

2011-05-18 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/z80/gen.c: